--- a/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp.csproj
+++ b/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Imported Assets\Clock\Scripts\Clock.cs" />
      <Compile Include="Assets\Scripts\Elevator.cs" />
-     <Compile Include="Assets\Scripts\NewBehaviourScript.cs" />
+     <Compile Include="Assets\Scripts\LevelChecks.cs" />
      <None Include="Assets\Imported Assets\plants\dd\AlphaTest-Bumped.shader" />
      <None Include="Assets\Imported Assets\Chairs and sofas pack\Readme.txt" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
