--- a/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp-vs.csproj
+++ b/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp-vs.csproj
@@ -47,21 +47,18 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Imported Assets\Clock\Scripts\Clock.cs" />
-     <Compile Include="Assets\Scripts\Elevator.cs" />
      <Compile Include="Assets\Scripts\Flashlight.cs" />
      <Compile Include="Assets\Scripts\LevelChecks.cs" />
-     <Compile Include="Assets\Scripts\triggerLight.cs" />
+     <Compile Include="Assets\Scripts\PlayerInteraction.cs" />
+     <Compile Include="Assets\Scripts\PlayerInventory.cs" />
+     <Compile Include="Assets\Scripts\TriggerLight.cs" />
      <None Include="Assets\Imported Assets\plants\dd\AlphaTest-Bumped.shader" />
      <None Include="Assets\Imported Assets\Chairs and sofas pack\Readme.txt" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Imported Assets\Snack_machines\readme.txt" />
      <None Include="Assets\Imported Assets\Urban_Props\readme.txt" />
  <Reference Include="Assembly-UnityScript-firstpass">
-<<<<<<< HEAD
- <HintPath>D:/Users/lms7898/ImagineCup/RIT 2014 Imagine Cup Unity Project/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
-=======
  <HintPath>D:/Users/mtc5284/2014_RIT_ImagineCup/RIT 2014 Imagine Cup Unity Project/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
->>>>>>> d6ef8c2790b3da283db88bb95dce649b968477ad
  </Reference>
   </ItemGroup>
   <ItemGroup>
