--- a/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp.csproj
+++ b/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp.csproj
@@ -47,10 +47,11 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Imported Assets\Clock\Scripts\Clock.cs" />
-     <Compile Include="Assets\Scripts\Elevator.cs" />
      <Compile Include="Assets\Scripts\Flashlight.cs" />
      <Compile Include="Assets\Scripts\LevelChecks.cs" />
-     <Compile Include="Assets\Scripts\triggerLight.cs" />
+     <Compile Include="Assets\Scripts\PlayerInteraction.cs" />
+     <Compile Include="Assets\Scripts\PlayerInventory.cs" />
+     <Compile Include="Assets\Scripts\TriggerLight.cs" />
      <None Include="Assets\Imported Assets\plants\dd\AlphaTest-Bumped.shader" />
      <None Include="Assets\Imported Assets\Chairs and sofas pack\Readme.txt" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
