--- a/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp.csproj
+++ b/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp.csproj
@@ -47,10 +47,12 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Imported Assets\Clock\Scripts\Clock.cs" />
+     <Compile Include="Assets\Scripts\ElevatorDoor.cs" />
      <Compile Include="Assets\Scripts\Flashlight.cs" />
      <Compile Include="Assets\Scripts\LevelChecks.cs" />
      <Compile Include="Assets\Scripts\PlayerInteraction.cs" />
      <Compile Include="Assets\Scripts\PlayerInventory.cs" />
+     <Compile Include="Assets\Scripts\TriggerElevatorDoors.cs" />
      <Compile Include="Assets\Scripts\TriggerLight.cs" />
      <None Include="Assets\Imported Assets\plants\dd\AlphaTest-Bumped.shader" />
      <None Include="Assets\Imported Assets\Chairs and sofas pack\Readme.txt" />
