--- a/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp-vs.csproj
+++ b/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp-vs.csproj
@@ -52,15 +52,16 @@
      <Compile Include="Assets\Scripts\LevelChecks.cs" />
      <Compile Include="Assets\Scripts\PlayerInteraction.cs" />
      <Compile Include="Assets\Scripts\PlayerInventory.cs" />
+     <Compile Include="Assets\Scripts\RotatingDoor.cs" />
      <Compile Include="Assets\Scripts\TriggerElevatorDoors.cs" />
-     <Compile Include="Assets\Scripts\TriggerLight.cs" />
+     <Compile Include="Assets\Scripts\triggerLight.cs" />
      <None Include="Assets\Imported Assets\plants\dd\AlphaTest-Bumped.shader" />
      <None Include="Assets\Imported Assets\Chairs and sofas pack\Readme.txt" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Imported Assets\Snack_machines\readme.txt" />
      <None Include="Assets\Imported Assets\Urban_Props\readme.txt" />
  <Reference Include="Assembly-UnityScript-firstpass">
- <HintPath>D:/Users/cmt4536/RIT 2014 Imagine Cup Hack-a-thon/RIT 2014 Imagine Cup Unity Project/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
+ <HintPath>D:/Users/mtc5284/2014_RIT_ImagineCup/RIT 2014 Imagine Cup Unity Project/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
