--- a/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp-vs.csproj
+++ b/RIT 2014 Imagine Cup Unity Project/Assembly-CSharp-vs.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Imported Assets\Clock\Scripts\Clock.cs" />
      <Compile Include="Assets\Scripts\AffectPlayer.cs" />
      <Compile Include="Assets\Scripts\ElevatorDoor.cs" />
+     <Compile Include="Assets\Scripts\FadeOut.cs" />
      <Compile Include="Assets\Scripts\Flashlight.cs" />
      <Compile Include="Assets\Scripts\LevelChecks.cs" />
      <Compile Include="Assets\Scripts\PlayerInteraction.cs" />
@@ -62,11 +63,7 @@
      <None Include="Assets\Imported Assets\Snack_machines\readme.txt" />
      <None Include="Assets\Imported Assets\Urban_Props\readme.txt" />
  <Reference Include="Assembly-UnityScript-firstpass">
-<<<<<<< HEAD
- <HintPath>D:/Users/cmt4536/RIT 2014 Imagine Cup Hack-a-thon/RIT 2014 Imagine Cup Unity Project/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
-=======
  <HintPath>D:/Users/mtc5284/2014_RIT_ImagineCup/RIT 2014 Imagine Cup Unity Project/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
->>>>>>> b12b3790f62b802ec584d9bd9b33d1e1c1ff2ea2
  </Reference>
   </ItemGroup>
   <ItemGroup>
